# tAI

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_arm64.sh  deploy_to_ecr.sh  docker-compose.yml
include/: AgeGenderDetector.hpp  BuildConfig.h  FaceDetector.hpp  ImageClassifier.hpp  ModelManager.hpp  ONNXInferenceEngine.hpp  ObjectDetector.hpp  RESTServer.hpp
scripts/: README_age_gender_detection.md  README_face_detection.md  build.sh  download_classification_model.sh  download_face_models.sh  download_models.sh  test_age_gender_detection.py  test_classification.py  test_client.py  test_face_detection.py  test_people_faces.py
src/: AgeGenderDetector.cpp  CMakeLists.txt  FaceDetector.cpp  ImageClassifier.cpp  ONNXInferenceEngine.cpp  ONNXObjectDetector.cpp  RESTServer.cpp  YOLODetector.cpp  main.cpp
